upload btn alignment fix

--- a/src/app/wca/pages/view-module/view-module.component.scss
+++ b/src/app/wca/pages/view-module/view-module.component.scss
@@ -26,9 +26,9 @@
 .bcgClrSync{
     background-color:#e9ecef;
 }
-.backgroundcol2{
+.upload-btn {
     cursor: pointer;
-    background-color: #bac9f1 !important;
+    background-color: #dbe7ff !important;
     white-space: nowrap;
     /* border: 1px solid !important; */
     color: #343777;
@@ -38,9 +38,11 @@
     padding-top: 0px;
     float: right;
     margin: 49px 54px -15px 22px;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 5px;
+    height: 35px;
   
 }
+
 
 
 .wrapper_1 {
